--- a/style.css
+++ b/style.css
@@ -5,6 +5,6 @@
  body {
             background-color: rgb(242, 242, 242);
         }
-#wholesome {
-            align: center
-          {
+.wholesome {
+           align: center;
+}
