--- a/style.css
+++ b/style.css
@@ -7,5 +7,7 @@
         }
 .wholesome {
            align: center;
-           margin: left:
+           margin-left: auto;
+           margin-right: auto;
+           
 }
