--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
             background-color: rgb(242, 242, 242);
         }
 .wholesome {
-           align: center;
+           text-align: center;
            margin-left: auto;
            margin-right: auto;
            
