--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
  body {
             background-color: rgb(242, 242, 242);
         }
-.wholesome {
+.top {
            text-align: center;
            margin-left: auto;
            margin-right: auto;
