--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@
 .top {
            text-align: center;
            margin-left: auto;
-           margin-right: auto;
-           
+           margin-right: auto;       
 }
+.buttons {
+         align: center;
+         margin: auto;
+     {
