--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
            margin-left: auto;
            margin-right: auto;       
 }
-.buttons {
+#buttons {
          align: center;
          margin: auto;
      {
