--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
            margin-right: auto;       
 }
 #buttons {
-         align: center;
-         margin: auto;
+display: block;
+max-width: 300px;
+margin: auto;
      {
