--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
            margin-right: auto;       
 }
 #buttons {
-margin: auto;
+margin-left: auto;
+margin-right: auto;
 text-align: center;
      {
