--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@
 }
 
 .button {
- margin-left: 15%;
-margin-right: 15%;
- align: center;
+ display: block;
+ margin-left: 400px;
+margin-right: 300px;
+
 }
