--- a/style.css
+++ b/style.css
@@ -12,9 +12,7 @@
            margin-right: auto;       
 }
 
-.button {
- display: block;
- margin-left: 400px;
-margin-right: 300px;
-
-}
+table.center {
+ margin-left: auto;
+ margin-right: auto;
+ {
